Add support for additional bucket states: paused, side_bin_locking_panels_missing, cleaning_interrupted (#72)
* Add bucket states from 'paused', 'side_bin_locking_panels_missing', 'cleaning_interrupted'

* Return the raw value for sensors if the value is unknown

--- a/custom_components/neakasa/translations/de.json
+++ b/custom_components/neakasa/translations/de.json
@@ -63,7 +63,10 @@
                     "cleaning": "Reinigung",
                     "leveling": "Nivellierung",
                     "flipover": "Verkehrt Herum",
-                    "cat_present": "Katze anwesend"
+                    "cat_present": "Katze anwesend",
+                    "paused": "Angehalten",
+                    "side_bin_locking_panels_missing": "Seitliche Verriegelungspaneele fehlen",
+                    "cleaning_interrupted": "Reinigung unterbrochen"
                 }
             },
             "sand_state": {
