#2 attempt to support China login flow

--- a/custom_components/pet_marvel/translations/en.json
+++ b/custom_components/pet_marvel/translations/en.json
@@ -7,7 +7,7 @@
                 "description": "Enter your Pet Marvel credentials.",
                 "data": {
                     "country": "Country",
-                    "email": "Email",
+                    "email": "Email / Phone",
                     "password": "Password"
                 }
             },
